# STA4020-Stat-Modelling-in-Finance-Markets

./: README.md  problem_set_1.ipynb  pyproject.toml
Assignment 1/: Problem3.html  Problem3.ipynb  Problem4.html  Problem4.ipynb  problem_set_1.ipynb
Assignment 2/: aapl_log_returns.csv  question5.R  question5.Rmd  question5.html
Assignment 3/: data.txt  problem6.ipynb
Assignment 4/: problem3.ipynb
Assignment 5/: aapl_return.csv  question_2.html  question_2.ipynb  question_3.html  question_3.ipynb  returns.pkl
Final Project/: axp_quotes.csv  final_project_code.ipynb  ma_quotes.csv  nio_quotes.csv  pltr_quotes.csv  tsla_quotes.csv  v_quotes.csv
