[tool.poetry]
name = "sta4020 sm in fm"
version = "0.1.0"
description = "this is the dependency mgmt for this repo"
authors = ["ZaneY <111720488+zazzane@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
statsmodels = "^0.14.2"
ipykernel = "^6.29.5"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
